<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp">

        <LinearLayout
            android:id="@+id/create_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:weightSum="1">

            <com.estimote.indoorsdk_module.view.IndoorLocationView
                android:id="@+id/indoor_view_note_creation"
                android:layout_width="match_parent"
                android:layout_height="236dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_note"
                android:textStyle="bold"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/noteCreationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:textSize="20dp"
                android:hint="@string/CreateNoteTitle"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/welcomeMsg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/choosepalace"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/palacechoice"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:textSize="25dp"
                android:background="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/noteDescription"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/NotesCreationDescription"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/imageSelected"
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/imgSelected"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/launch_browser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorButtonPrimary"
                android:onClick="goToSelectImage"
                android:textSize="25dp"
                android:text="@string/launchBrowserButton"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/new_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorButtonPrimary"
                android:onClick="createNewNote"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/NoteCreationButton"
                android:textAllCaps="false" />

            <ImageView
                android:id="@+id/checkedImage"
                android:layout_width="307dp"
                android:layout_height="209dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>