...
                    android:text="@string/reloadButton"
                    android:onClick="reload"
                    android:textAllCaps="false" />
            </LinearLayout>

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorButtonPrimary"
                android:onClick="selectImage"
                android:textStyle="bold"
...
