<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/create_menu"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:background="@android:color/transparent"
            android:onClick="goToCreateMenu"
            app:srcCompat="@drawable/createwhite"></ImageView>

        <ImageView
            android:id="@+id/train_menu"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:onClick="goToTrainMenu"
            app:srcCompat="@drawable/trainwhite"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="20dp"
            android:text="@string/createLabel"
            android:onClick="goToCreateMenu"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/trainMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="20dp"
            android:onClick="goToTrainMenu"
            android:text="@string/trainLabel"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/track_menu"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:background="@android:color/transparent"
            android:onClick="goToTrackMenu"
            app:srcCompat="@drawable/trackwhite"></ImageView>

        <ImageView
            android:id="@+id/settings"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:onClick="goToSettings"
            app:srcCompat="@drawable/settingswhite"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trackMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="20dp"
            android:text="@string/trackLabel"
            android:onClick="goToTrackMenu"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/settingsMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginBottom="20dp"
            android:text="@string/settingsLabel"
            android:onClick="goToSettings"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/signOut"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="signOut"
        android:text="@string/signOutButton"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textAllCaps="false" />

</LinearLayout>